--- a/index.htm
+++ b/index.htm
@@ -1,9 +1,9 @@
 <!doctype html>
 <html>
   <head>
-    <!-- 
-    <script src="js/angular.min.js"></script> 
-    -->
+     
+    <script src="js/automata_framework.js"></script> 
+    
     <meta charset="utf-8" />
   </head>
   <body>
