--- a/index.htm
+++ b/index.htm
@@ -21,7 +21,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#page-top">Ilocano Dialect Syntactic Checker</a>
+                <a class="navbar-brand" href="#page-top">Iloko Dialect Syntactic Checker</a>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
@@ -106,7 +106,7 @@
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>About IDSC</h3>
-                        <p>IDSC is a free to use, open source syntactic checker for the Ilocano Dialect <a href="#check">Start IDSC</a>.</p>
+                        <p>IDSC is a free to use, open source syntactic checker for the Iloko Dialect. <a href="#check">Start IDSC</a>.</p>
                     </div>
                 </div>
             </div>
@@ -115,7 +115,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; Ilocano Dialect Syntactic Checker 2016
+                        Copyright &copy; 2016 Iloko Dialect Syntactic Checker 
                     </div>
                 </div>
             </div>
