--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,7 @@
     <script src="js/automata_framework.js"></script> 
     <script src="js/automata_sentence.js"></script>     
     <meta charset="utf-8" />
-	<title>Ilocano Syntactic Checker</title>
+	<title>Iloko Syntactic Checker</title>
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/freelancer.css" rel="stylesheet">
