--- a/index.htm
+++ b/index.htm
@@ -182,7 +182,7 @@
             }
           }
           
-          console.log(mtokens);
+          //console.log(mtokens);
           // TODO
           // word stemming and dictionary tagging     
 
